CSFML/include/Window/Window.h

typedef struct
{
    unsigned int depthBits;         ///< Bits of the depth buffer
    unsigned int stencilBits;       ///< Bits of the stencil buffer
    unsigned int antialiasingLevel; ///< Level of antialiasing
    unsigned int majorVersion;      ///< Major number of the context version to create
    unsigned int minorVersion;      ///< Minor number of the context version to create
    sfUint32 attributeFlags;        ///< The attribute flags to create the context with
    sfBool sRgbCapable;             ///< Whether the context framebuffer is sRGB capable
} sfContextSettings;
extern "C" sfWindow *sfWindow_createUnicode(sfVideoMode mode, const sfUint32 *title, sfUint32 style, const sfContextSettings *settings);
extern "C" sfWindow *sfWindow_createFromHandle(sfWindowHandle handle, const sfContextSettings *settings);
extern "C" void sfWindow_destroy(sfWindow *window);
extern "C" void sfWindow_close(sfWindow *window);
extern "C" sfBool sfWindow_isOpen(const sfWindow *window);
extern "C" sfContextSettings sfWindow_getSettings(const sfWindow *window);
extern "C" sfBool sfWindow_pollEvent(sfWindow *window, sfEvent *event);
extern "C" sfBool sfWindow_waitEvent(sfWindow *window, sfEvent *event);
extern "C" sfVector2i sfWindow_getPosition(const sfWindow *window);
extern "C" void sfWindow_setPosition(sfWindow *window, sfVector2i position);
extern "C" sfVector2u sfWindow_getSize(const sfWindow *window);
extern "C" void sfWindow_setSize(sfWindow *window, sfVector2u size);
extern "C" void sfWindow_setUnicodeTitle(sfWindow *window, const sfUint32 *title);
extern "C" void sfWindow_setIcon(sfWindow *window, unsigned int width, unsigned int height, const sfUint8 *pixels);
extern "C" void sfWindow_setVisible(sfWindow *window, sfBool visible);
extern "C" void sfWindow_setVerticalSyncEnabled(sfWindow *window, sfBool enabled);
extern "C" void sfWindow_setMouseCursorVisible(sfWindow *window, sfBool visible);
extern "C" void sfWindow_setMouseCursorGrabbed(sfWindow *window, sfBool grabbed);
extern "C" void sfWindow_setMouseCursor(sfWindow *window, const sfCursor *cursor);
extern "C" void sfWindow_setKeyRepeatEnabled(sfWindow *window, sfBool enabled);
extern "C" void sfWindow_setFramerateLimit(sfWindow *window, unsigned int limit);
extern "C" void sfWindow_setJoystickThreshold(sfWindow *window, float threshold);
extern "C" sfBool sfWindow_setActive(sfWindow *window, sfBool active);
extern "C" void sfWindow_requestFocus(sfWindow *window);
extern "C" sfBool sfWindow_hasFocus(const sfWindow *window);