ffi/csfml-window-sys/src/lib.rs

#[test]
fn bindgen_test_layout_sfEvent() {
    assert_eq!(
        ::std::mem::size_of::<sfEvent>(),
        24usize,
        concat!("Size of: ", stringify!(sfEvent))
    );
    assert_eq!(
        ::std::mem::align_of::<sfEvent>(),
        4usize,
        concat!("Alignment of ", stringify!(sfEvent))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfEvent>())).type_ as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sfEvent),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfEvent>())).size as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sfEvent),
            "::",
            stringify!(size)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfEvent>())).key as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sfEvent),
            "::",
            stringify!(key)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfEvent>())).text as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sfEvent),
            "::",
            stringify!(text)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfEvent>())).mouseMove as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sfEvent),
            "::",
            stringify!(mouseMove)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfEvent>())).mouseButton as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sfEvent),
            "::",
            stringify!(mouseButton)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfEvent>())).mouseWheel as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sfEvent),
            "::",
            stringify!(mouseWheel)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfEvent>())).mouseWheelScroll as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sfEvent),
            "::",
            stringify!(mouseWheelScroll)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfEvent>())).joystickMove as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sfEvent),
            "::",
            stringify!(joystickMove)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfEvent>())).joystickButton as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sfEvent),
            "::",
            stringify!(joystickButton)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfEvent>())).joystickConnect as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sfEvent),
            "::",
            stringify!(joystickConnect)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfEvent>())).touch as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sfEvent),
            "::",
            stringify!(touch)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfEvent>())).sensor as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sfEvent),
            "::",
            stringify!(sensor)
        )
    );
}
pub type wchar_t = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone, Hash, PartialOrd, Ord, PartialEq, Eq)]
pub struct sfVideoMode {
    pub width: ::std::os::raw::c_uint,
    pub height: ::std::os::raw::c_uint,
    pub bitsPerPixel: ::std::os::raw::c_uint,
}
#[test]
fn bindgen_test_layout_sfVideoMode() {
    assert_eq!(
        ::std::mem::size_of::<sfVideoMode>(),
        12usize,
        concat!("Size of: ", stringify!(sfVideoMode))
    );
    assert_eq!(
        ::std::mem::align_of::<sfVideoMode>(),
        4usize,
        concat!("Alignment of ", stringify!(sfVideoMode))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfVideoMode>())).width as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sfVideoMode),
            "::",
            stringify!(width)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfVideoMode>())).height as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(sfVideoMode),
            "::",
            stringify!(height)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfVideoMode>())).bitsPerPixel as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sfVideoMode),
            "::",
            stringify!(bitsPerPixel)
        )
    );
}
extern "C" {
    pub fn sfVideoMode_getDesktopMode() -> sfVideoMode;
}
extern "C" {
    pub fn sfVideoMode_getFullscreenModes(count: *mut usize) -> *const sfVideoMode;
}
extern "C" {
    pub fn sfVideoMode_isValid(mode: sfVideoMode) -> sfBool;
}
pub type sfWindowHandle = ::std::os::raw::c_ulong;
pub const sfWindowStyle_sfNone: sfWindowStyle = 0;
pub const sfWindowStyle_sfTitlebar: sfWindowStyle = 1;
pub const sfWindowStyle_sfResize: sfWindowStyle = 2;
pub const sfWindowStyle_sfClose: sfWindowStyle = 4;
pub const sfWindowStyle_sfFullscreen: sfWindowStyle = 8;
pub const sfWindowStyle_sfDefaultStyle: sfWindowStyle = 7;
pub type sfWindowStyle = ::std::os::raw::c_uint;
pub const sfContextAttribute_sfContextDefault: sfContextAttribute = 0;
pub const sfContextAttribute_sfContextCore: sfContextAttribute = 1;
pub const sfContextAttribute_sfContextDebug: sfContextAttribute = 4;
pub type sfContextAttribute = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone, Hash, PartialOrd, Ord, PartialEq, Eq)]
pub struct sfContextSettings {
    pub depthBits: ::std::os::raw::c_uint,
    pub stencilBits: ::std::os::raw::c_uint,
    pub antialiasingLevel: ::std::os::raw::c_uint,
    pub majorVersion: ::std::os::raw::c_uint,
    pub minorVersion: ::std::os::raw::c_uint,
    pub attributeFlags: sfUint32,
    pub sRgbCapable: sfBool,
}
#[test]
fn bindgen_test_layout_sfContextSettings() {
    assert_eq!(
        ::std::mem::size_of::<sfContextSettings>(),
        28usize,
        concat!("Size of: ", stringify!(sfContextSettings))
    );
    assert_eq!(
        ::std::mem::align_of::<sfContextSettings>(),
        4usize,
        concat!("Alignment of ", stringify!(sfContextSettings))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfContextSettings>())).depthBits as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sfContextSettings),
            "::",
            stringify!(depthBits)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfContextSettings>())).stencilBits as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(sfContextSettings),
            "::",
            stringify!(stencilBits)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sfContextSettings>())).antialiasingLevel as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sfContextSettings),
            "::",
            stringify!(antialiasingLevel)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfContextSettings>())).majorVersion as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(sfContextSettings),
            "::",
            stringify!(majorVersion)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfContextSettings>())).minorVersion as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(sfContextSettings),
            "::",
            stringify!(minorVersion)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sfContextSettings>())).attributeFlags as *const _ as usize
        },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(sfContextSettings),
            "::",
            stringify!(attributeFlags)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfContextSettings>())).sRgbCapable as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(sfContextSettings),
            "::",
            stringify!(sRgbCapable)
        )
    );
}
extern "C" {
    pub fn sfWindow_create(
        mode: sfVideoMode,
        title: *const ::std::os::raw::c_char,
        style: sfUint32,
        settings: *const sfContextSettings,
    ) -> *mut sfWindow;
}
extern "C" {
    pub fn sfWindow_createUnicode(
        mode: sfVideoMode,
        title: *const sfUint32,
        style: sfUint32,
        settings: *const sfContextSettings,
    ) -> *mut sfWindow;
}
extern "C" {
    pub fn sfWindow_createFromHandle(
        handle: sfWindowHandle,
        settings: *const sfContextSettings,
    ) -> *mut sfWindow;
}
extern "C" {
    pub fn sfWindow_destroy(window: *mut sfWindow);
}
extern "C" {
    pub fn sfWindow_close(window: *mut sfWindow);
}
extern "C" {
    pub fn sfWindow_isOpen(window: *const sfWindow) -> sfBool;
}
extern "C" {
    pub fn sfWindow_getSettings(window: *const sfWindow) -> sfContextSettings;
}
extern "C" {
    pub fn sfWindow_pollEvent(window: *mut sfWindow, event: *mut sfEvent) -> sfBool;
}
extern "C" {
    pub fn sfWindow_waitEvent(window: *mut sfWindow, event: *mut sfEvent) -> sfBool;
}
extern "C" {
    pub fn sfWindow_getPosition(window: *const sfWindow) -> sfVector2i;
}
extern "C" {
    pub fn sfWindow_setPosition(window: *mut sfWindow, position: sfVector2i);
}
extern "C" {
    pub fn sfWindow_getSize(window: *const sfWindow) -> sfVector2u;
}
extern "C" {
    pub fn sfWindow_setSize(window: *mut sfWindow, size: sfVector2u);
}
extern "C" {
    pub fn sfWindow_setTitle(window: *mut sfWindow, title: *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn sfWindow_setUnicodeTitle(window: *mut sfWindow, title: *const sfUint32);
}
extern "C" {
    pub fn sfWindow_setIcon(
        window: *mut sfWindow,
        width: ::std::os::raw::c_uint,
        height: ::std::os::raw::c_uint,
        pixels: *const sfUint8,
    );
}
extern "C" {
    pub fn sfWindow_setVisible(window: *mut sfWindow, visible: sfBool);
}
extern "C" {
    pub fn sfWindow_setVerticalSyncEnabled(window: *mut sfWindow, enabled: sfBool);
}
extern "C" {
    pub fn sfWindow_setMouseCursorVisible(window: *mut sfWindow, visible: sfBool);
}
extern "C" {
    pub fn sfWindow_setMouseCursorGrabbed(window: *mut sfWindow, grabbed: sfBool);
}
extern "C" {
    pub fn sfWindow_setMouseCursor(window: *mut sfWindow, cursor: *const sfCursor);
}
extern "C" {
    pub fn sfWindow_setKeyRepeatEnabled(window: *mut sfWindow, enabled: sfBool);
}
extern "C" {
    pub fn sfWindow_setFramerateLimit(window: *mut sfWindow, limit: ::std::os::raw::c_uint);
}
extern "C" {
    pub fn sfWindow_setJoystickThreshold(window: *mut sfWindow, threshold: f32);
}
extern "C" {
    pub fn sfWindow_setActive(window: *mut sfWindow, active: sfBool) -> sfBool;
}
extern "C" {
    pub fn sfWindow_requestFocus(window: *mut sfWindow);
}
extern "C" {
    pub fn sfWindow_hasFocus(window: *const sfWindow) -> sfBool;
}
